--- a/index.html
+++ b/index.html
@@ -421,36 +421,36 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>深圳市野火集餐饮娱乐有限公司
+        <span class="xd">|</span><span>高新区狮山新鼎红至尊娱乐中心
 </span>
     </div>
     <div class="ycxx">
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>编号</span>
-                <span>440304160225</span>
+                <span>320505160152</span>
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>深圳市野火集餐饮娱乐有限公司
+                <span>高新区狮山新鼎红至尊娱乐中心
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>深圳市福田区沙头街道上沙社区滨河大道9283号中洲滨海商业中心一期负一层B109号铺</span>
+                <span>苏州高新区狮山路68号</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>滕继伟
+                <span>蒋正东
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>类型</span>
-                <span>有限责任公司</span>
+                <span>个体工商户</span>
             </div>
             <div class="ycxx-left">
                 <span>单位类别</span>
@@ -464,7 +464,7 @@
             </div>
             <div class="ycxx-left">
                 <span>首次发证日期</span>
-                <span>2025-06-28</span>
+                <span>2024-11-18</span>
             </div>
         </div>
         <div class="ycxx-content">
@@ -486,7 +486,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>有效期</span>
-                <span>2025-06-28 至 2027-06-27</span>
+                <span>2024-11-18 至 2026-11-18</span>
             </div>
             <div class="ycxx-left">
                 <span>经营范围</span>
@@ -496,11 +496,11 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>深圳市福田区文化广电旅游体育局</span>
+                <span>苏州高新区（虎丘区）行政审批局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
-                <span>2025-06-28</span>
+                <span>2024-11-18</span>
             </div>
         </div>
     </div>
