--- a/index.html
+++ b/index.html
@@ -421,36 +421,36 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>高新区狮山新鼎红至尊娱乐中心
+        <span class="xd">|</span><span>沧州乐盛娱乐有限公司
 </span>
     </div>
     <div class="ycxx">
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>编号</span>
-                <span>320505160152</span>
+                <span>130902160013</span>
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>高新区狮山新鼎红至尊娱乐中心
+                <span>沧州乐盛娱乐有限公司
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>苏州高新区狮山路68号</span>
+                <span>沧州市新华区解放东路37号</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>蒋正东
+                <span>王文乐
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>类型</span>
-                <span>个体工商户</span>
+                <span>有限责任公司(自然人投资或控股)</span>
             </div>
             <div class="ycxx-left">
                 <span>单位类别</span>
@@ -464,7 +464,7 @@
             </div>
             <div class="ycxx-left">
                 <span>首次发证日期</span>
-                <span>2024-11-18</span>
+                <span>2024-01-21</span>
             </div>
         </div>
         <div class="ycxx-content">
@@ -486,7 +486,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>有效期</span>
-                <span>2024-11-18 至 2026-11-18</span>
+                <span>2024-01-21 至 2026-01-20</span>
             </div>
             <div class="ycxx-left">
                 <span>经营范围</span>
@@ -496,11 +496,11 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>苏州高新区（虎丘区）行政审批局</span>
+                <span>沧州市新华区行政审批局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
-                <span>2024-11-18</span>
+                <span>2024-01-21</span>
             </div>
         </div>
     </div>
