--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>荆州市荆州区文化和旅游局</span>
+                <span>荆州市荆州区市场监督管理局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
