--- a/index.html
+++ b/index.html
@@ -421,29 +421,29 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>荆州区锦园歌厅
+        <span class="xd">|</span><span>黄冈市黄州区缤纷酒店管理店
 </span>
     </div>
     <div class="ycxx">
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>编号</span>
-                <span>421003160039</span>
+                <span>460300584153</span>
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>荆州区锦园歌厅
+                <span>黄冈市黄州区缤纷酒店管理店
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>荆州区锦园歌厅</span>
+                <span>黄冈市黄州区东门路39号2-4层</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>张玉玲
+                <span>龙华军
 </span>
             </div>
         </div>
@@ -464,7 +464,7 @@
             </div>
             <div class="ycxx-left">
                 <span>首次发证日期</span>
-                <span>2024-12-26</span>
+                <span>2025-02-18</span>
             </div>
         </div>
         <div class="ycxx-content">
@@ -474,7 +474,7 @@
             </div>
             <div class="ycxx-left">
                 <span>核定人数</span>
-                <span></span>
+                <span>530</span>
             </div>
         </div>
         <div class="ycxx-content">
@@ -490,17 +490,17 @@
             </div>
             <div class="ycxx-left">
                 <span>经营范围</span>
-                <span>卡拉OK厅，卡拉OK包房</span>
+                <span>提供KTV服务</span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>荆州市荆州区市场监督管理局</span>
+                <span>黄州区市场监督管理局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
-                <span>2024-12-26</span>
+                <span>2025-02-18</span>
             </div>
         </div>
     </div>
