--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>黄冈市黄州区缤纷酒店管理店
+        <span class="xd">|</span><span>汕头市金平区遇见娱乐部（个人独资）
 </span>
     </div>
     <div class="ycxx">
@@ -432,25 +432,25 @@
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>黄冈市黄州区缤纷酒店管理店
+                <span>汕头市金平区遇见娱乐部（个人独资）
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>黄冈市黄州区东门路39号2-4层</span>
+                <span>汕头市金平区新厦路5号品牌街E7连二楼</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>龙华军
+                <span>邢晓亮
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>类型</span>
-                <span>个体工商户</span>
+                <span>个人独资企业</span>
             </div>
             <div class="ycxx-left">
                 <span>单位类别</span>
@@ -496,7 +496,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>黄州区市场监督管理局</span>
+                <span>汕头市金平区工商行政管理局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
