--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>汕头市金平区遇见娱乐部（个人独资）
+        <span class="xd">|</span><span>汕头市合成亨酒店管理有限公司
 </span>
     </div>
     <div class="ycxx">
@@ -432,25 +432,25 @@
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>汕头市金平区遇见娱乐部（个人独资）
+                <span>汕头市合成亨酒店管理有限公司
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>汕头市金平区新厦路5号品牌街E7连二楼</span>
+                <span>汕头市金平区龙眼路67号202房</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>邢晓亮
+                <span>叶姗姗
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>类型</span>
-                <span>个人独资企业</span>
+                <span>有限责任公司（自然人投资或控股）</span>
             </div>
             <div class="ycxx-left">
                 <span>单位类别</span>
@@ -496,7 +496,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>汕头市金平区工商行政管理局</span>
+                <span>汕头市金平区市场监督管理局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
