--- a/index.html
+++ b/index.html
@@ -421,29 +421,29 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>汕头市合成亨酒店管理有限公司
+        <span class="xd">|</span><span>盐城市略步科技有限公司
 </span>
     </div>
     <div class="ycxx">
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>编号</span>
-                <span>第44000022300837540号</span>
+                <span>第32090020221088号</span>
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>汕头市合成亨酒店管理有限公司
+                <span>盐城市略步科技有限公司
 </span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>汕头市金平区龙眼路67号202房</span>
+                <span>盐城市区嘉元广场西区商办楼幢1117室（5）</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>叶姗姗
+                <span>许乃群
 </span>
             </div>
         </div>
@@ -496,7 +496,7 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>汕头市金平区市场监督管理局</span>
+                <span>盐城市亭湖区行政审批局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
